// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eia-environmental-impact-schedule GET /change should render the development category change page with "Other" radio option checked if eiaEnvironmentalImpactSchedule is null 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change development category</h1>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eiaEnvironmentalImpactSchedule"
                                    name="eiaEnvironmentalImpactSchedule" type="radio" value="schedule-1">
                                    <label class="govuk-label govuk-radios__label" for="eiaEnvironmentalImpactSchedule">Schedule 1</label>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eiaEnvironmentalImpactSchedule-2"
                                    name="eiaEnvironmentalImpactSchedule" type="radio" value="schedule-2">
                                    <label class="govuk-label govuk-radios__label" for="eiaEnvironmentalImpactSchedule-2">Schedule 2</label>
                                </div>
                                <div class="govuk-radios__divider">or</div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eiaEnvironmentalImpactSchedule-4"
                                    name="eiaEnvironmentalImpactSchedule" type="radio" value="other" checked>
                                    <label class="govuk-label govuk-radios__label" for="eiaEnvironmentalImpactSchedule-4">Other</label>
                                </div>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`eia-environmental-impact-schedule GET /change should render the development category change page with "Schedule 1" radio option checked if eiaEnvironmentalImpactSchedule is "schedule-1" 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change development category</h1>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eiaEnvironmentalImpactSchedule"
                                    name="eiaEnvironmentalImpactSchedule" type="radio" value="schedule-1" checked>
                                    <label class="govuk-label govuk-radios__label" for="eiaEnvironmentalImpactSchedule">Schedule 1</label>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eiaEnvironmentalImpactSchedule-2"
                                    name="eiaEnvironmentalImpactSchedule" type="radio" value="schedule-2">
                                    <label class="govuk-label govuk-radios__label" for="eiaEnvironmentalImpactSchedule-2">Schedule 2</label>
                                </div>
                                <div class="govuk-radios__divider">or</div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eiaEnvironmentalImpactSchedule-4"
                                    name="eiaEnvironmentalImpactSchedule" type="radio" value="other">
                                    <label class="govuk-label govuk-radios__label" for="eiaEnvironmentalImpactSchedule-4">Other</label>
                                </div>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
